agregando el lick del tiktok

--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <label><a href="https://www.tiktok.com/@acomer.pe/video/7115201582819511557?is_copy_url=1&is_from_webapp=v1&q=aguadito%20receta&t=1658474583195">Link del tiktok del aguadito</a></label>
+    </footer>
 </body>
 </html>
