ultimos toques para el aguadito

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <li>Ají amarillo(5 cdas. de pasta)</li>
                 <li>culantro(1 taza de )</li>
                 <li>200 g. de mollejas de pollo</li>
+                <li>alberjas</li>
+                <li>zanahora</li>
+                <li>choclo</li>
             </ul>
         </section>
     </main>
