arreglando el error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ListaComprars</title>
     <meta name="robots" content="index,follow"/>
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     <main>
         <section class="RECETA">
             <ul>
-                <h1>Lista de cosas a comprar</h1>
+                <h1>RECETA</h1>
                 <li>4 cdas. de aceite</li>
                 <li>1 cebolla roja</li>
                 <li>5 dientes de ajo</li>
